--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
       <img class="img-flex" src="http://placehold.it/640x480" alt="">
     </header>
     <div class="card-body">
-      <p>The Stegosaurus is an armoured dinosaur with distintive back plates and tail spikes.</p>
+      <p>The Stegosaurus is an armoured dinosaur with distinctive back plates and tail spikes.</p>
     </div>
   </article>
 
-
-  <body>
-  </html>
+<body>
+</html>
